ctm-sf-homeloan-app/main/default/objects/Account/fields/BorrowingPowerStatus__c.field-meta.xml
<CustomField>
    <fullName>BorrowingPowerStatus__c</fullName>
    <label>Borrowing Power Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>