ctm-sf-homeloan-app/main/default/objects/Account/fields/ChosenLoanAmount__c.field-meta.xml
<CustomField>
    <fullName>ChosenLoanAmount__c</fullName>
    <label>Chosen Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>