ctm-sf-homeloan-app/main/default/objects/Account/fields/CommercialCreditDefaults__c.field-meta.xml
<CustomField>
    <fullName>CommercialCreditDefaults__c</fullName>
    <label>Commercial Credit Defaults</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>