ctm-sf-homeloan-app/main/default/objects/Account/fields/CommercialCreditEnquiries__c.field-meta.xml
<CustomField>
    <fullName>CommercialCreditEnquiries__c</fullName>
    <label>Commercial Credit Enquiries</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>