ctm-sf-homeloan-app/main/default/objects/Account/fields/ConsumerCreditAccounts__c.field-meta.xml
<CustomField>
    <fullName>ConsumerCreditAccounts__c</fullName>
    <label>Consumer Credit Accounts</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>