ctm-sf-homeloan-app/main/default/objects/Account/fields/ConsumerCreditDefaults__c.field-meta.xml
<CustomField>
    <fullName>ConsumerCreditDefaults__c</fullName>
    <label>Consumer Credit Defaults</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>