ctm-sf-homeloan-app/main/default/objects/Account/fields/ConsumerCreditEnquiries__c.field-meta.xml
<CustomField>
    <fullName>ConsumerCreditEnquiries__c</fullName>
    <label>Consumer Credit Enquiries</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>