ctm-sf-homeloan-app/main/default/objects/Account/fields/CourtActions__c.field-meta.xml
<CustomField>
    <fullName>CourtActions__c</fullName>
    <label>Court Actions</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>