ctm-sf-homeloan-app/main/default/objects/Account/fields/CreditFileAccessRecord__c.field-meta.xml
<CustomField>
    <fullName>CreditFileAccessRecord__c</fullName>
    <label>Credit File Access Record</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>