ctm-sf-homeloan-app/main/default/objects/Account/fields/CreditScore__c.field-meta.xml
<CustomField>
    <fullName>CreditScore__c</fullName>
    <label>Credit Score</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>