ctm-sf-homeloan-app/main/default/objects/Account/fields/CreditScoreID__c.field-meta.xml
<CustomField>
    <fullName>CreditScoreID__c</fullName>
    <label>Credit Score ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>