ctm-sf-homeloan-app/main/default/objects/Account/fields/CreditScoreSummary__c.field-meta.xml
<CustomField>
    <fullName>CreditScoreSummary__c</fullName>
    <label>Credit Score Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>