ctm-sf-homeloan-app/main/default/objects/Account/fields/DateofIssue__c.field-meta.xml
<CustomField>
    <fullName>DateofIssue__c</fullName>
    <label>Date of Issue</label>
    <type>Date</type>
</CustomField>