ctm-sf-homeloan-app/main/default/objects/Account/fields/Dependants__c.field-meta.xml
<CustomField>
    <fullName>Dependants__c</fullName>
    <label>Dependants</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>