ctm-sf-homeloan-app/main/default/objects/Account/fields/DocumentIssed_By__c.field-meta.xml
<CustomField>
    <fullName>DocumentIssed_By__c</fullName>
    <label>Document Issed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>