ctm-sf-homeloan-app/main/default/objects/Account/fields/DocumentNumberEncrypted__c.field-meta.xml
<CustomField>
    <fullName>DocumentNumberEncrypted__c</fullName>
    <label>Document Number Encrypted</label>
    <length>170</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>