ctm-sf-homeloan-app/main/default/objects/Account/fields/DocumentType__c.field-meta.xml
<CustomField>
    <fullName>DocumentType__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Driver Licence</fullName>
            </value>
            <value>
                <fullName>Australian Passport</fullName>
            </value>
            <value>
                <fullName>Foreign Passport with Valid Australian Visa</fullName>
            </value>
            <value>
                <fullName>Australian Medicare Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>