ctm-sf-homeloan-app/main/default/objects/Account/fields/ExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>ExpiryDate__c</fullName>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>