ctm-sf-homeloan-app/main/default/objects/Account/fields/HomeLoanApplication__c.field-meta.xml
<CustomField>
    <fullName>HomeLoanApplication__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if the customer has submitted a home loan application</description>
    <label>Home Loan Application</label>
    <type>Checkbox</type>
</CustomField>