ctm-sf-homeloan-app/main/default/objects/Account/fields/HomeLoanApplicationSubmissionDate__c.field-meta.xml
<CustomField>
    <fullName>HomeLoanApplicationSubmissionDate__c</fullName>
    <label>Home Loan Application Submission Date</label>
    <type>DateTime</type>
</CustomField>