ctm-sf-homeloan-app/main/default/objects/Account/fields/HomeLoanJourney__c.field-meta.xml
<CustomField>
    <fullName>HomeLoanJourney__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicate customer has started a home loan application</description>
    <label>Home Loan Journey</label>
    <type>Checkbox</type>
</CustomField>