ctm-sf-homeloan-app/main/default/objects/Account/fields/HomeLoanJourneyStartDate__c.field-meta.xml
<CustomField>
    <fullName>HomeLoanJourneyStartDate__c</fullName>
    <label>Home Loan Journey Start Date</label>
    <type>DateTime</type>
</CustomField>