ctm-sf-homeloan-app/main/default/objects/Account/fields/HowManyApplicants__c.field-meta.xml
<CustomField>
    <fullName>HowManyApplicants__c</fullName>
    <label>How Many Applicants</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>