ctm-sf-homeloan-app/main/default/objects/Account/fields/HowManyDependents__c.field-meta.xml
<CustomField>
    <fullName>HowManyDependents__c</fullName>
    <label>How Many Dependents</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>