ctm-sf-homeloan-app/main/default/objects/Account/fields/ImportantNote__c.field-meta.xml
<CustomField>
    <fullName>ImportantNote__c</fullName>
    <label>Important Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>