ctm-sf-homeloan-app/main/default/objects/Account/fields/LanguageSpoken__c.field-meta.xml
<CustomField>
    <fullName>LanguageSpoken__c</fullName>
    <label>Language Spoken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>