ctm-sf-homeloan-app/main/default/objects/Account/fields/LatestCreditCheckDate__c.field-meta.xml
<CustomField>
    <fullName>LatestCreditCheckDate__c</fullName>
    <label>Latest Credit Check Date</label>
    <type>Date</type>
</CustomField>