ctm-sf-homeloan-app/main/default/objects/Account/fields/MaximumPropertyPurchasePrice__c.field-meta.xml
<CustomField>
    <fullName>MaximumPropertyPurchasePrice__c</fullName>
    <label>Maximum Property Purchase Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>