ctm-sf-homeloan-app/main/default/objects/Account/fields/MinimumContribution__c.field-meta.xml
<CustomField>
    <fullName>MinimumContribution__c</fullName>
    <label>Minimum Contribution</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>