ctm-sf-homeloan-app/main/default/objects/Account/fields/NameonDocument__c.field-meta.xml
<CustomField>
    <fullName>NameonDocument__c</fullName>
    <label>Name on Document</label>
    <length>255</length>
    <type>Text</type>
</CustomField>