ctm-sf-homeloan-app/main/default/objects/Account/fields/NumberofDependents__c.field-meta.xml
<CustomField>
    <fullName>NumberofDependents__c</fullName>
    <label>Number of Dependents</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>