ctm-sf-homeloan-app/main/default/objects/Account/fields/OriginalCreditCheckDate__c.field-meta.xml
<CustomField>
    <fullName>OriginalCreditCheckDate__c</fullName>
    <label>Original Credit Check Date</label>
    <type>Date</type>
</CustomField>