ctm-sf-homeloan-app/main/default/objects/Account/fields/OverallStatus__c.field-meta.xml
<CustomField>
    <fullName>OverallStatus__c</fullName>
    <label>Overall Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>