ctm-sf-homeloan-app/main/default/objects/Account/fields/PlaceofIssue__c.field-meta.xml
<CustomField>
    <fullName>PlaceofIssue__c</fullName>
    <label>Place of Issue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>