ctm-sf-homeloan-app/main/default/objects/Account/fields/PropertyAddress__c.field-meta.xml
<CustomField>
    <fullName>PropertyAddress__c</fullName>
    <label>Property Address</label>
    <type>Address</type>
</CustomField>