ctm-sf-homeloan-app/main/default/objects/Account/fields/RemainingBorrowingPower__c.field-meta.xml
<CustomField>
    <fullName>RemainingBorrowingPower__c</fullName>
    <label>Remaining Borrowing Power</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>