ctm-sf-homeloan-app/main/default/objects/Account/fields/SeriousCreditInfringements__c.field-meta.xml
<CustomField>
    <fullName>SeriousCreditInfringements__c</fullName>
    <label>Serious Credit Infringements</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>