ctm-sf-homeloan-app/main/default/objects/Account/fields/TotalBorrowingPower__c.field-meta.xml
<CustomField>
    <fullName>TotalBorrowingPower__c</fullName>
    <label>Total Borrowing Power</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>