ctm-sf-homeloan-app/main/default/objects/Account/fields/TotalBorrowingPowerExpenses__c.field-meta.xml
<CustomField>
    <fullName>TotalBorrowingPowerExpenses__c</fullName>
    <label>Total Borrowing Power Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>