ctm-sf-homeloan-app/main/default/objects/Account/fields/TotalBorrowingPowerIncome__c.field-meta.xml
<CustomField>
    <fullName>TotalBorrowingPowerIncome__c</fullName>
    <label>Total Borrowing Power Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>