ctm-sf-homeloan-app/main/default/objects/Account/fields/TotalBorrowingPowerLiabilities__c.field-meta.xml
<CustomField>
    <fullName>TotalBorrowingPowerLiabilities__c</fullName>
    <label>Total Borrowing Power Liabilities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>