ctm-sf-homeloan-app/main/default/objects/Account/fields/TotalGrossAnnualIncome__c.field-meta.xml
<CustomField>
    <fullName>TotalGrossAnnualIncome__c</fullName>
    <label>Total Gross Annual Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>