ctm-sf-homeloan-app/main/default/objects/Account/fields/TotalNetAnnualIncome__c.field-meta.xml
<CustomField>
    <fullName>TotalNetAnnualIncome__c</fullName>
    <label>Total Net Annual Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>