ctm-sf-homeloan-app/main/default/objects/Account/fields/TotalProcessTime__c.field-meta.xml
<CustomField>
    <fullName>TotalProcessTime__c</fullName>
    <label>Total Process Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>