ctm-sf-homeloan-app/main/default/objects/Account/fields/VOICompletedAt__c.field-meta.xml
<CustomField>
    <fullName>VOICompletedAt__c</fullName>
    <label>VOI Completed At</label>
    <type>DateTime</type>
</CustomField>