ctm-sf-homeloan-app/main/default/objects/Account/fields/VOISMSLink__c.field-meta.xml
<CustomField>
    <fullName>VOISMSLink__c</fullName>
    <label>VOI SMS Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>