ctm-sf-homeloan-app/main/default/objects/Account/fields/VOITransactionID__c.field-meta.xml
<CustomField>
    <fullName>VOITransactionID__c</fullName>
    <label>VOI Transaction ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>