ctm-sf-homeloan-app/main/default/objects/Account/fields/WeeklyHemValue__c.field-meta.xml
<CustomField>
    <fullName>WeeklyHemValue__c</fullName>
    <label>Weekly Hem Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>