ctm-sf-homeloan-app/main/default/objects/Account/fields/WhatIsYourGoal__c.field-meta.xml
<CustomField>
    <fullName>WhatIsYourGoal__c</fullName>
    <label>What Is Your Goal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SELL_HOME_AND_BUY</fullName>
            </value>
            <value>
                <fullName>Refinance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>