ctm-sf-homeloan-app/main/default/objects/Account/fields/WhatOtherLoanFeaturesImportant__c.field-meta.xml
<CustomField>
    <fullName>WhatOtherLoanFeaturesImportant__c</fullName>
    <label>What Other Loan Features Important</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OFFSET</fullName>
            </value>
            <value>
                <fullName>REDRAW</fullName>
            </value>
            <value>
                <fullName>ADD_REPAY</fullName>
                <label>ADD REPAY</label>
            </value>
            <value>
                <fullName>FLEX_REPAY</fullName>
                <label>FLEX REPAY</label>
            </value>
            <value>
                <fullName>ONLINE_ACCESS</fullName>
                <label>ONLINE ACCESS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>