ctm-sf-homeloan-app/main/default/objects/Account/fields/WhichLendersWouldYouLike__c.field-meta.xml
<CustomField>
    <fullName>WhichLendersWouldYouLike__c</fullName>
    <label>Which Lenders Would You Like</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MAJOR_BANKS</fullName>
                <label>MAJOR BANKS</label>
            </value>
            <value>
                <fullName>POPULAR_LENDERS</fullName>
                <label>POPULAR LENDERS</label>
            </value>
            <value>
                <fullName>MUTUALS_CREDIT_UNIONS</fullName>
                <label>MUTUALS CREDIT UNIONS</label>
            </value>
            <value>
                <fullName>NON_BANK</fullName>
                <label>NON BANK</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>