ctm-sf-homeloan-app/main/default/objects/Account/fields/WhoIsYourCurrentLender__c.field-meta.xml
<CustomField>
    <fullName>WhoIsYourCurrentLender__c</fullName>
    <label>Who Is Your Current Lender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>